<resources>
    <string name="app_name">Mega Store</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAny Day</string>
    <string name="quality">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="start">Start</string>
    <string name="g_log_in">Login</string>
    <string name="g_register">Register</string>
    <string name="lets_login">Let\'s Login</string>
    <string name="dont_have_account">"Don't have an account? "</string>
    <string name="have_account">"have an account? "</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="lets_register">let\'s Register</string>
    <string name="fristName">First Name</string>
    <string name="lastName">Last Name</string>

    <string name="webClint_id">754586980531-joda3s719mjukr1o8gqt1kg28pvi0be2.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="g_search_now">Search now</string>
    <string name="skip">Skip</string>
    <string name="best_deals">Best Deals</string>
    <string name="see_more">See More</string>
    <string name="otp">OTP</string>
    <string name="color">Colors</string>
    <string name="select_size">Select size</string>
    <string name="size">Sizes</string>
    <string name="select_color">Select color</string>
    <string name="add_review">Add Review</string>
    <string name="save">Save</string>
    <string name="phone">Phone Number</string>
    <string name="current_location">Current Location</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="street">Street</string>
    <string name="full_name">Full Name</string>
    <string name="address_location_ie_home">"Full Address"</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
</resources>
