<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_address_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="15dp"
        android:gravity="start|center_vertical"
        style="@style/editText"
        android:hint="@string/address_location_ie_home"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/ed_full_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="15dp"
        android:gravity="start|center_vertical"
        style="@style/editText"
        android:hint="@string/full_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"

        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/ed_address_title" />

    <EditText
        android:id="@+id/ed_street"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="10dp"
        android:gravity="start|center_vertical"
        style="@style/editText"
        android:hint="@string/street"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/ed_full_name" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/ed_phone">

        <EditText
            android:id="@+id/ed_city"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            style="@style/editText"
            android:hint="@string/city"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/ed_state"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            style="@style/editText"
            android:hint="@string/state"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ed_phone"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="10dp"
        android:gravity="start|center_vertical"
        android:paddingVertical="@dimen/_10sdp"
        android:hint="@string/phone"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/ed_street" />


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_add_new_address"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/currentLocation"
        style="@style/whiteButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/current_location"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_new_address"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getFromMap"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/blue_background"
        android:text="@string/save"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/btn_add_new_address" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>