<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_app_name_accountOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_name"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:drawableStartCompat="@drawable/ic_kleine_shape" />

    <TextView
        android:id="@+id/tv_right_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_thin"
        android:gravity="center"
        android:text="@string/rightAddress"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="@id/tv_app_name_accountOption"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name_accountOption"
        app:layout_constraintStart_toStartOf="@id/tv_app_name_accountOption"
        android:layout_marginTop="@dimen/_40sdp"
        />

    <TextView
        android:id="@+id/tv_best_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/g_gray700"
        android:gravity="center"
        android:text="@string/quality"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="@id/tv_right_place"
        app:layout_constraintStart_toStartOf="@id/tv_right_place"
        app:layout_constraintTop_toBottomOf="@id/tv_right_place" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.07"
        style="@style/blueButtonStyle"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        android:text="@string/g_register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_best_quality"
        app:layout_constraintStart_toStartOf="@id/tv_best_quality"
        app:layout_constraintTop_toBottomOf="@id/tv_best_quality"
        android:layout_marginBottom="@dimen/_5sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.07"
        style="@style/whiteButtonStyle"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        android:text="@string/g_log_in"
        android:textColor="@color/g_black"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="@id/btn_register"
        android:layout_marginTop="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>