<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:fontFamily="@font/poppins_thin"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@color/app_theme_color"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_app_name_Login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_app_name_Login_register" />
    <TextView
        android:id="@+id/tv_app_name_Login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_kleine_shape"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_name"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_lets_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_thin"
        android:gravity="center"
        android:text="@string/lets_register"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="@id/tv_app_name_Login_register"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name_Login_register" />

    <TextView
        android:id="@+id/tv_dont_have_account_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start"
        android:text="@string/dont_have_account"
        android:textColor="@color/g_gray700"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="@id/tv_lets_login_register"
        app:layout_constraintTop_toBottomOf="@id/tv_lets_login_register" />

    <EditText
        android:id="@+id/edFirstName"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_38sdp"
        android:hint="@string/fristName"
        android:singleLine="true"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dont_have_account_register" />

    <EditText
        android:id="@+id/edLastName"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/lastName"
        android:singleLine="true"
        android:maxLines="1"

        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/edFirstName" />

    <EditText
        android:id="@+id/ed_email"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        android:singleLine="true"
        android:maxLines="1"

        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edLastName" />

    <EditText
        android:id="@+id/edpassword"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/password"
        android:singleLine="true"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_Register"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/g_register"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edpassword"
        app:spinning_bar_color="@color/white" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/g_gray700"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Register" />

    <TextView
        android:id="@+id/orTxt"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:text="OR"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintEnd_toEndOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toTopOf="@id/divider"

        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:orientation="horizontal"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="26dp">

        <ImageView
            android:id="@+id/facebookLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_6sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_ripple"
            android:src="@drawable/facebook_ic"

            android:text="@string/gmail"
            android:textAllCaps="false"
            android:textSize="@dimen/_10ssp" />

        <ImageView
            android:id="@+id/gmailLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_ripple"
            android:src="@drawable/google_ic"
            android:text="@string/gmail"

            android:textAllCaps="false"
            android:textSize="@dimen/_10ssp" />

        <ImageView
            android:id="@+id/phoneLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_6sdp"

            android:layout_weight="1"
            android:background="@drawable/btn_bg_ripple"
            android:src="@drawable/ic_phone"
            android:text="@string/gmail"
            android:textAllCaps="false"

            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:indicatorColor="@color/app_theme_color"
        app:indicatorName="BallPulseIndicator"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@id/linearLayout"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>